# Recommendation-Engine

./: README.md  pyproject.toml
demo/github_mcp/derived/: chat_context.json  member_skill_profiles.json
demo/github_mcp/raw/issues/: T002.json  T003.json  T004.json
demo/github_mcp/raw/pushes/: T002.json  T003.json  T004.json
docs/: implementation-plan.md
scripts/: build_skill_profiles.py
src/recommend_engine/: __init__.py  ab_testing.py  analysis.py  cache.py  chat_context.py  cli.py  demo_data.py  hybrid_reranker.py  models.py  preprocessing.py  service.py  statistics.py
