[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recommendation-engine"
version = "0.1.0"
description = "GitHub issue and commit history skill analysis for chat support"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
recommend-engine = "recommend_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
